--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
   </head>
   <body class="oj-web-applayout-body">
     <!-- Template for rendering navigation items -->
+     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-wp-preserve="%3Cscript%20type%3D%22text%2Fhtml%22%20id%3D%22navTemplate%22%3E%20%20%20%20%20%20%0A%20%20%20%20%20%20%3C%2Fp%3E%0A%3Cli%20data-bind%3D%22visible%3A%20(!%24data%5B'loggedInOnly'%5D%7C%7C%20%24root.userLoggedIn()%20%3D%3D'Y')%22%3E%3Ca%20href%3D%22%23%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Cspan%20data-bind%3D%22css%3A%20%24data%5B'iconClass'%5D%22%3E%3C%2Fspan%3E%0A%20%20%20%20%20%20%20%20%20%20%3C!--%20ko%20text%3A%20%24data%5B'name'%5D%20--%3E%20%3C!--%2Fko--%3E%0A%20%20%20%20%20%20%20%20%3C%2Fa%3E%3C%2Fli%3E%0A%3Cp%3E%20%0A%20%20%20%20%3C%2Fscript%3E" data-mce-resize="false" data-mce-placeholder="1" class="mce-object" width="20" height="20" alt="&lt;script&gt;" title="&lt;script&gt;" />
     <script type="text/html" id="navTemplate">
       <li><a href="#">
         <span :class="[[$data['iconClass']]]"></span>
