--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,10 @@
       <header role="banner" class="oj-web-applayout-header">
         <div class="oj-web-applayout-max-width oj-flex-bar oj-sm-align-items-center">
           <div class="oj-flex-bar-middle oj-sm-align-items-baseline">
-            <span role="img" class="oj-icon demo-oracle-icon" title="Oracle Logo" alt="Oracle Logo"></span>
+            <span role="img" class="oj-icon-circle" title="Team 2" alt="Team Two">
+              <span class="oj-icon-circle-inner">
+      </span>
+            </span>
             <h1 class="oj-sm-only-hide oj-web-applayout-header-title" title="Application Name"><oj-bind-text value="[[appName]]"></oj-bind-text></h1>
           </div>
           <div class="oj-flex-bar-end">
