--- a/src/index.html
+++ b/src/index.html
@@ -28,25 +28,42 @@
   <head>
     <title>HNG</title>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1"
+    />
     <link rel="icon" href="css/images/favicon.ico" type="image/x-icon" />
 
     <!-- This is the main css file for the default Alta theme -->
     <!-- injector:theme -->
-    <link rel="stylesheet" href="css/libs/oj/v7.1.0/alta/oj-alta-min.css" type="text/css"/>
+    <link
+      rel="stylesheet"
+      href="css/libs/oj/v7.1.0/alta/oj-alta-min.css"
+      type="text/css"
+    />
     <!-- endinjector -->
-    
+
     <!-- This contains icon fonts used by the starter template -->
-    <link rel="stylesheet" href="css/demo-alta-site-min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/demo-alta-site-min.css" type="text/css" />
 
     <!-- This is where you would add any app specific styling -->
-    <link rel="stylesheet" href="css/app.css" type="text/css"/>
-
+    <link rel="stylesheet" href="css/app.css" type="text/css" />
   </head>
   <body class="oj-web-applayout-body">
     <!-- Template for rendering navigation items -->
-     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-wp-preserve="%3Cscript%20type%3D%22text%2Fhtml%22%20id%3D%22navTemplate%22%3E%20%20%20%20%20%20%0A%20%20%20%20%20%20%3C%2Fp%3E%0A%3Cli%20data-bind%3D%22visible%3A%20(!%24data%5B'loggedInOnly'%5D%7C%7C%20%24root.userLoggedIn()%20%3D%3D'Y')%22%3E%3Ca%20href%3D%22%23%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Cspan%20data-bind%3D%22css%3A%20%24data%5B'iconClass'%5D%22%3E%3C%2Fspan%3E%0A%20%20%20%20%20%20%20%20%20%20%3C!--%20ko%20text%3A%20%24data%5B'name'%5D%20--%3E%20%3C!--%2Fko--%3E%0A%20%20%20%20%20%20%20%20%3C%2Fa%3E%3C%2Fli%3E%0A%3Cp%3E%20%0A%20%20%20%20%3C%2Fscript%3E" data-mce-resize="false" data-mce-placeholder="1" class="mce-object" width="20" height="20" alt="&lt;script&gt;" title="&lt;script&gt;" />
+    <img
+      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+      data-wp-preserve="%3Cscript%20type%3D%22text%2Fhtml%22%20id%3D%22navTemplate%22%3E%20%20%20%20%20%20%0A%20%20%20%20%20%20%3C%2Fp%3E%0A%3Cli%20data-bind%3D%22visible%3A%20(!%24data%5B'loggedInOnly'%5D%7C%7C%20%24root.userLoggedIn()%20%3D%3D'Y')%22%3E%3Ca%20href%3D%22%23%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3Cspan%20data-bind%3D%22css%3A%20%24data%5B'iconClass'%5D%22%3E%3C%2Fspan%3E%0A%20%20%20%20%20%20%20%20%20%20%3C!--%20ko%20text%3A%20%24data%5B'name'%5D%20--%3E%20%3C!--%2Fko--%3E%0A%20%20%20%20%20%20%20%20%3C%2Fa%3E%3C%2Fli%3E%0A%3Cp%3E%20%0A%20%20%20%20%3C%2Fscript%3E"
+      data-mce-resize="false"
+      data-mce-placeholder="1"
+      class="mce-object"
+      width="20"
+      height="20"
+      alt="&lt;script&gt;"
+      title="&lt;script&gt;"
+    />
+
     <script type="text/html" id="navTemplate">
       <li><a href="#">
         <span :class="[[$data['iconClass']]]"></span>
@@ -62,61 +79,100 @@
          ** on the JET website for more information on how to use this pattern.
       -->
       <header role="banner" class="oj-web-applayout-header">
-        <div class="oj-web-applayout-max-width oj-flex-bar oj-sm-align-items-center">
+        <div
+          class="oj-web-applayout-max-width oj-flex-bar oj-sm-align-items-center"
+        >
           <div class="oj-flex-bar-middle oj-sm-align-items-baseline">
-            <span role="img" class="oj-icon-circle" title="Team 2" alt="Team Two">
-              <span class="oj-icon-circle-inner">
-      </span>
+            <span
+              role="img"
+              class="oj-icon-circle"
+              title="Team 2"
+              alt="Team Two"
+            >
+              <span class="oj-icon-circle-inner"> </span>
             </span>
-            <h1 class="oj-sm-only-hide oj-web-applayout-header-title" title="Application Name"><oj-bind-text value="[[appName]]"></oj-bind-text></h1>
+            <h1
+              class="oj-sm-only-hide oj-web-applayout-header-title"
+              title="Application Name"
+            >
+              <oj-bind-text value="[[appName]]"></oj-bind-text>
+            </h1>
           </div>
           <div class="oj-flex-bar-end">
             <!-- Responsive Toolbar -->
             <oj-toolbar>
-              <oj-menu-button id="userMenu" display="[[smScreen() ? 'icons' : 'all']]" chroming="half">
+              <oj-menu-button
+                id="userMenu"
+                display="[[smScreen() ? 'icons' : 'all']]"
+                chroming="half"
+              >
                 <span><oj-bind-text value="[[userLogin]]"></oj-bind-text></span>
-                <span slot="endIcon" :class="[[{'oj-icon demo-appheader-avatar': smScreen(), 'oj-component-icon oj-button-menu-dropdown-icon': !smScreen()}]]"></span>
+                <span
+                  slot="endIcon"
+                  :class="[[{'oj-icon demo-appheader-avatar': smScreen(), 'oj-component-icon oj-button-menu-dropdown-icon': !smScreen()}]]"
+                ></span>
                 <oj-menu id="menu1" slot="menu" style="display:none">
                   <oj-option id="pref" value="pref">Preferences</oj-option>
                   <oj-option id="help" value="help">Help</oj-option>
                   <oj-option id="about" value="about">About</oj-option>
-                  <oj-option id="out" value="out">Sign Out</oj-option>
+                  <oj-option id="out" value="out">
+                    <span
+                      data-bind="text: (userLoggedIn() =='Y'?'Sign Out':'Sign In/Sign Up')"
+                    ></span>
+                  </oj-option>
                 </oj-menu>
               </oj-menu-button>
             </oj-toolbar>
           </div>
         </div>
-        <div role="navigation" class="oj-web-applayout-max-width oj-web-applayout-navbar">
-          <oj-navigation-list id="navList" data="[[navDataProvider]]"
-                              :class="[[{'oj-md-condense oj-md-justify-content-flex-end': !smScreen()}]]"
-                              display="[[smScreen() ? 'icons' : 'all']]"
-                              edge="top"
-                              item.renderer="[[KnockoutTemplateUtils.getRenderer('navTemplate', true)]]"
-                              selection="{{router.stateId}}">
+        <div
+          role="navigation"
+          class="oj-web-applayout-max-width oj-web-applayout-navbar"
+        >
+          <oj-navigation-list
+            id="navList"
+            data="[[navDataProvider]]"
+            :class="[[{'oj-md-condense oj-md-justify-content-flex-end': !smScreen()}]]"
+            display="[[smScreen() ? 'icons' : 'all']]"
+            edge="top"
+            item.renderer="[[KnockoutTemplateUtils.getRenderer('navTemplate', true)]]"
+            selection="{{ router.stateId }}"
+          >
           </oj-navigation-list>
         </div>
       </header>
-      <oj-module role="main" class="oj-web-applayout-max-width oj-web-applayout-content" config="[[moduleConfig]]">
+      <oj-module
+        role="main"
+        class="oj-web-applayout-max-width oj-web-applayout-content"
+        config="[[moduleConfig]]"
+      >
       </oj-module>
       <footer class="oj-web-applayout-footer" role="contentinfo">
         <div class="oj-web-applayout-footer-item oj-web-applayout-max-width">
           <ul>
             <oj-bind-for-each data="[[footerLinks]]">
               <template>
-                <li><a :id="[[$current.data.linkId]]" :href="[[$current.data.linkTarget]]"><oj-bind-text value="[[$current.data.name]]"></oj-bind-text></a></li>
+                <li>
+                  <a
+                    :id="[[$current.data.linkId]]"
+                    :href="[[$current.data.linkTarget]]"
+                    ><oj-bind-text value="[[$current.data.name]]"></oj-bind-text
+                  ></a>
+                </li>
               </template>
             </oj-bind-for-each>
           </ul>
         </div>
-        <div class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-secondary-color oj-text-sm">
-          Copyright © 2014, 2019 Oracle and/or its affiliates All rights reserved.
+        <div
+          class="oj-web-applayout-footer-item oj-web-applayout-max-width oj-text-secondary-color oj-text-sm"
+        >
+          Copyright © 2014, 2019 Oracle and/or its affiliates All rights
+          reserved.
         </div>
       </footer>
     </div>
-    
+
     <script type="text/javascript" src="js/libs/require/require.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
   </body>
-
 </html>
